--- a/public/styles-admin.css
+++ b/public/styles-admin.css
@@ -15,6 +15,7 @@ body {
     width: 100vw;
     height: 100vh;
     color: whitesmoke;
+    display: none;
 }
 
 #conversations {
@@ -116,6 +117,7 @@ body {
       width: 100vw;
       height: 100vh;
       color: whitesmoke;
+      display: none;
   }
 
   #conversations {
