--- a/public/styles-admin.css
+++ b/public/styles-admin.css
@@ -11,6 +11,21 @@ body {
     overflow: hidden;
 }
 
+#passwordInput {
+  width: 60vw;
+  height: 10vh;
+  border: 3px solid rgb(161, 161, 161);
+  border-radius: 6px;
+} 
+
+#passwordSubmit {
+  width: 60vw;
+  height: 10vh;
+  border: 3px solid rgb(161, 161, 161);
+  border-radius: 6px;
+}
+   
+
 #adminPanel {
     width: 100vw;
     height: 100vh;
