--- a/public/styles-admin.css
+++ b/public/styles-admin.css
@@ -16,6 +16,8 @@ body {
   height: 10vh;
   border: 3px solid rgb(161, 161, 161);
   border-radius: 6px;
+  color: white;
+  font-size: 3vh;
 } 
 
 #passwordSubmit {
