--- a/public/styles-admin.css
+++ b/public/styles-admin.css
@@ -18,6 +18,7 @@ body {
   border-radius: 6px;
   color: white;
   font-size: 3vh;
+    background-color: black;
 } 
 
 #passwordSubmit {
@@ -25,7 +26,7 @@ body {
   height: 10vh;
   border: 3px solid rgb(161, 161, 161);
   border-radius: 6px;
-    font-size: 6vh;
+    font-size: 4vh;
 }
    
 
