--- a/public/styles-admin.css
+++ b/public/styles-admin.css
@@ -16,7 +16,7 @@ body {
   height: 10vh;
   border: 3px solid rgb(161, 161, 161);
   border-radius: 6px;
-  color: white;
+  color: red;
   font-size: 3vh;
     background-color: black;
 } 
